TestRepo2/src/objects/Drink_Recipe_Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>Diageo_Brand_Name__c</fullName>
        <formula>Ingredient__r.Recipe_Diageo_Product__r.Diageo_Brand_Id__r.Name</formula>
        <label>Diageo Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Product_Name__c</fullName>
        <formula>Ingredient__r.Recipe_Diageo_Product__r.Name</formula>
        <label>Diageo Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( Ingredient__r.Recipe_Diageo_Product__c &lt;&gt;&quot;&quot; , Ingredient__r.Recipe_Diageo_Product__r.Image__c, &quot;No Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingredient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ingredient</label>
        <referenceTo>Ingredient__c</referenceTo>
        <relationshipLabel>Drink Recipe Ingredients</relationshipLabel>
        <relationshipName>Drink_Recipe_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>0.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Drink Recipe Ingredients</relationshipLabel>
        <relationshipName>Drink_Recipe_Ingredients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>tsp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>oz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Drink Recipe Ingredient</label>
    <nameField>
        <displayFormat>DREng={0000}</displayFormat>
        <label>Drink Recipe Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Recipe Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>